--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   http: ^0.12.0+4
   intl: ^0.16.1
   flutter_spinkit: ^4.1.1+1
-
+  flutter_local_notifications: ^1.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
